# cppcore

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  codecov.yml
.github/workflows/: LinuxBuild.yml  MacOSBuild.yml  WindowsBuild.yml
Lib/CMake/: BuildSetting.cmake  CMakeLists.txt.in  CodeCoverage.cmake  CompileOptions.cmake  GoogleTest.cmake
Src/: CMakeLists.txt
Src/000_String/: 000_String.h  BOM.cpp  BOM.h  BOMT.cpp  CMakeLists.txt  CStrLegacy.cpp  CStrLegacy.h  CStrSafe.cpp  CStrSafe.h  Exception.cpp  Exception.h  NumericString.cpp  NumericString.h  STLString.cpp  Unicode.cpp  UnicodeEncoding.cpp  UnicodeEncoding_Linux_Mac.cpp  UnicodeEncoding_Win.cpp  Unicode_Linux_Mac.cpp  Unicode_Win.cpp  pch.h
Src/BaseProject/: CMakeLists.txt  function.cpp  function.h  main.cpp  pch.h
Src/_Common/: Define.h  Errorcode.h  Type.h
Test/: CMakeLists.txt
Test/000_StringTest/: CMakeLists.txt  CStrLegacyTest.cpp  CStrSafeTest.cpp  NumericStringTest.cpp  STLStringTest.cpp  UnicodeTest.cpp  pch.h
Test/BaseProjectTest/: CMakeLists.txt  functionTest.cpp
